@@ -1039,11 +1039,11 @@
 </td>
 <td class=cellinside><br /> The function provides a standardised plot output for curve data of an<br /> RLum.Analysis S4 class object<br />
 </td>
-<td class=cellinside>0.2.3
+<td class=cellinside>0.2.4
 </td>
-<td class=cellinside>2015-04-30
+<td class=cellinside>2015-05-06
 </td>
-<td class=cellinside>12:00:11
+<td class=cellinside>18:24:07
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
